# qaprs

./: Cargo.toml  README.md
OutputTroponin23-0923-10/: APYLands-MimiliClinicTroponin23-0923-10.tex  APYLands-PipalyatjaraClinicTroponin23-0923-10.tex  APYLands-PukatjaClinicTroponin23-0923-10.tex  AngastonDistrictHospitalTroponin23-0923-10.tex  BarmeraHealthServiceTroponin23-0923-10.tex  BarmeraMedicalCentre(LakeBonneyPrivateMC)Troponin23-0923-10.tex  BoolerooCentreDistrictHospitalTroponin23-0923-10.tex  BurraHospitalTroponin23-0923-10.tex  CentralYorkePeninsulaHospital(Maitland)Troponin23-0923-10.tex  CleveDistrictHospitalandAgedCareTroponin23-0923-10.tex  EllistonHospitalTroponin23-0923-10.tex  GPCare-SummitHealthMountBarkerTroponin23-0923-10.tex  GumerachaDistrictSoldiers’MemorialHospitalTroponin23-0923-10.tex  HealthonWashingtonTroponin23-0923-10.tex  JamestownHospitalandHealthServiceTroponin23-0923-10.tex  KapundaHospitalTroponin23-0923-10.tex  KeithandDistrictHospitalTroponin23-0923-10.tex  KimbaDistrictHospitalandAgedCareTroponin23-0923-10.tex  KingstonSoldiers'MemorialHospitalTroponin23-0923-10.tex  LauraDistrictHospitalTroponin23-0923-10.tex  LeighCreekHealthServiceTroponin23-0923-10.tex  LoxtonHospitalComplexTroponin23-0923-10.tex  MalleeMedicalPinnarooTroponin23-0923-10.tex  MillicentandDistrictsHospitalandHealthServiceTroponin23-0923-10.tex  Moorundi-RaukkanClinicTroponin23-0923-10.tex  MountPleasantDistrictHospitalTroponin23-0923-10.tex  MurrayBridgeSoldiers’MemorialHospital(A&E)Troponin23-0923-10.tex  OrrorooandDistrictHealthServiceTroponin23-0923-10.tex  (+16 more)
(+161 files in other folders)
