[package]
name = "slint-test"
version = "0.1.0"
authors = ["johndenton"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"
native-dialog = "0.7.0"
rfd = "0.13.0"
csv = "1.3.0"
[build-dependencies]
slint-build = "1.3"
